testcases/semantic/valid/func_loop.rs
fn insert() -> bool {
    loop {
        if (true) {
            return true;
        }
    }
}

fn main() {
    exit(0);
}
