testcases/semantic/invalid/test.rs
fn determinant() -> i32 {
    _
}
fn main() {
    exit(0);
}
